--- a/TODO
+++ b/TODO
@@ -15,7 +15,12 @@ boss modules:
 - data driven => would enable sequence autorecord and live editing
 - p1s
 -- intemperance cubes
-- p2s: ???
+- p2s
+-- deluge debug...
+-- avarice
+-- kampeos
+-- coherence
+-- flow? doubled impact? tainted flood? shockwave? bubbling?
 - zodiark
 -- refactor
 - hydaelyn, p4s: todo
