Fixed clipping error for almost-parallel lines.
- repro: P2S deluge, azimuth=80

--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ boss modules:
 - draw arrows in world
 - p1s - make intemperance component useful
 - p2s
+-- show dissociation sooner!
 - zodiark
 -- refactor
 - hydaelyn, p4s: todo
