--- a/TODO
+++ b/TODO
@@ -13,14 +13,11 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
-- common refactoring
--- draw/query aoes
--- object id watch
 - show per-player risks and fails
 - draw arrows in world
 - p1s - make intemperance component useful
-- p2s
--- show dissociation sooner!
+- p2s - improve channeling flow component
+- p2s - minor components (shockwave, ominous bubbling, eruption?..)
 - zodiark
 -- refactor
 - hydaelyn, p4s: todo
