--- a/TODO
+++ b/TODO
@@ -13,11 +13,14 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
+- better action-id check (only spells)
 - show per-player risks and fails
 - draw arrows in world
 - p1s - make intemperance component useful
 - p2s - improve channeling flow component
 - p2s - minor components (shockwave, ominous bubbling, eruption?..)
+- p3s - for plume, show hint only if hit by next 2...
+- p3s - twisters - bad clipping (see longest pull @8:11)
 - zodiark
 -- refactor
 - hydaelyn, p4s: todo
