--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ general:
 - clip circles to arena bounds...
 - reconsider worldstate->bossmodule event subscription model (tedious to manually subscribe/unsubsribe and forward to components...)
 - fail log?
+- look into bogus STA! messages (fc buffs, 0 duration...)
+- StateMachine update should return (done + taken-fork) and not touch Next
 
 network:
 - hook send/recv (a-la xivalexander)
