Component refactoring (moved to separate files, create/destroy as needed)

--- a/TODO
+++ b/TODO
@@ -11,10 +11,10 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
-- refactor components (base class component list should only contain active components)
-- refactor state machine (add id/comment, add ComponentCondition, better bosscast states, remove timeouts)
+- refactor state machine (add id/comment, better bosscast states, remove timeouts)
 - p1s - make intemperance component useful
 - p2s - improve channeling flow component
+- p2s - coherence hints are shit
 - p2s - minor components (shockwave, ominous bubbling, eruption?..)
 - zodiark - refactor
 - hydaelyn - todo
