--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
+- refactor party (always 8 players) + optional alliance?, support open-world encounters...
 - refactor state machine (add id/comment, better bosscast states, remove timeouts)
 - p1s - make intemperance component useful
 - p2s - improve channeling flow component
@@ -42,5 +43,5 @@ autorotation:
 - action not learned = GetActionStatus -> 573 (this is rowid of LogMessage "action not yet learned")
 
 world rendering:
-- danger zones
+- danger zones (modify action vfx?)
 - arrows
