--- a/TODO
+++ b/TODO
@@ -11,7 +11,6 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
-- refactor party (always 8 players) + optional alliance?, support open-world encounters...
 - refactor state machine (add id/comment, better bosscast states, remove timeouts)
 - p1s - make intemperance component useful
 - p2s - improve channeling flow component
@@ -21,6 +20,7 @@ boss modules:
 - hydaelyn - todo
 - improve per-player risks...
 - data driven => would enable sequence autorecord and live editing
+- open-world encounters
 
 autorotation:
 - planner (defensive CDs, charge, delay offensive?)
