Finished bossmodule refactoring, split P4S into two modules.

--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
-- refactor state machine (add id/comment, better bosscast states, remove timeouts)
+- refactor state machine (add id/comment, remove timeouts)
 - p1s - make intemperance component useful
 - p2s - improve channeling flow component
 - p2s - coherence hints are shit
