--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ general:
 - reconsider worldstate->bossmodule event subscription model (tedious to manually subscribe/unsubsribe and forward to components...)
 - fail log?
 - determine exact mechanism for cooldown reset (on instance enter and on wipe)
+- data driven boss modules?.. would enable sequence autorecord and live editing - or is it covered by replay analysis?
 
 replay encounter analysis:
 - ability relative positioning
@@ -20,13 +21,9 @@ network:
 boss modules:
 - refactor state machine (add id/comment, remove timeouts)
 - p1s - make intemperance component useful
-- p2s - improve channeling flow component
-- p2s - coherence hints are shit
 - p2s - minor components (shockwave, ominous bubbling, eruption?..)
 - zodiark - refactor
 - hydaelyn - todo
-- improve per-player risks...
-- data driven => would enable sequence autorecord and live editing
 
 autorotation:
 - planner (defensive CDs, charge, delay offensive?)
