--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
+- assignments and sharing (webservice?)
 - refactor state machine (add id/comment, remove timeouts)
 - p1s - make intemperance component useful
 - p2s - minor components (shockwave, ominous bubbling, eruption?..)
