--- a/TODO
+++ b/TODO
@@ -8,11 +8,11 @@ network:
 - allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 boss modules:
+- try not to activate components on exit (problems on early exit on wipe)
 - assignments and sharing (webservice?)
 - p1s - make intemperance component useful
 - p2s - minor components (shockwave, ominous bubbling, eruption?..)
 - p3s - verify bird tethers on zerg
-- zodiark - test and confirm enrage
 - hydaelyn - todo
 
 autorotation:
