WHM autorot fixes:
- added ground-targeting queueing patch from MOAction
- smart-queue now remembers all targets (main, mouseover, etc)
- added auto assize
- added option to forbid blood lily overcap
- allow casting medica2 when hot from other WHM is up
- do not cast plenary indulgence if casting at full hp (to get medica hot up or spend lilies during intermissions)
- slightly increased dia overwrite timer

--- a/TODO
+++ b/TODO
@@ -22,8 +22,9 @@ autorotation:
 -- offensive CD planning/delay
 - whm:
 -- aero - low-level status ids
--- auto assize
 -- planner
+-- do not overwrite DB
+-- disable heal self-target, add proper self-targeting?..
 
 cooldown planner:
 - select columns to show (concrete actions, categories)
