--- a/TODO
+++ b/TODO
@@ -10,8 +10,6 @@ network:
 
 boss modules:
 - draw actors by framework (components should return color+prio)
-- assignments and sharing (webservice?)
-- targeting should take hitbox into account (0.5 for players) - cones, circles, rects...
 - p3s - review, searing breeze component
 
 autorotation:
@@ -23,8 +21,7 @@ autorotation:
 - whm:
 -- aero - low-level status ids
 -- planner
--- do not overwrite DB
--- disable heal self-target, add proper self-targeting?..
+-- smart-targeting for ST actions
 
 cooldown planner:
 - select columns to show (concrete actions, categories)
@@ -46,6 +43,8 @@ misc:
 - data driven boss modules?.. would enable sequence autorecord and live editing - or is it covered by replay analysis?
 - draw target max-melee and boss positioning hints?..
 - action not learned = GetActionStatus -> 573 (this is rowid of LogMessage "action not yet learned") => can be used to disable non-learned spells
+- assignments and sharing (webservice?)
+- aoe checks should take hitbox into account (0.5 for players) - cones, circles, rects...
 
 notes on targeting:
 - aoe (e.g. cone) will hit if shape intersects target's hitbox; for players it is == 0.5
