--- a/TODO
+++ b/TODO
@@ -1,30 +1,22 @@
-replay encounter analysis:
-- tether & debuff passing range
-- pull range
-
-network:
-- hook send/recv (a-la xivalexander)
-- store raw packets, create visualizer
-- auto detect new opcodes for known packets based on size
-- allow injecting custom client messages in next sent bundle (or just create new bundle?..)
-
 boss modules:
 - draw actors by framework (components should return color+prio)
+- generalize components as much as possible
+- fail log
 - p3s - review, searing breeze component
 - aglaia revise, implement phases
 - ultima weapon - implement phases
-- generalize components as much as possible
-- fail log
 
 autorotation:
 - opener support
 - war
+-- 6.1 adjustments
 -- low-level rotation - improve berserk delay logic, berserk buff id
 -- automatic bloodwhetting?
 -- charge planning
 -- offensive CD planning/delay
 -- potion use (first, second)
 - whm:
+-- 6.1 adjustments
 -- planner
 -- smart-targeting for ST actions
 
@@ -39,6 +31,16 @@ cooldown planner:
 world rendering:
 - danger zones (modify action vfx?)
 - arrows
+
+replay encounter analysis:
+- tether & debuff passing range
+- pull range
+
+network:
+- hook send/recv (a-la xivalexander)
+- store raw packets, create visualizer
+- auto detect new opcodes for known packets based on size
+- allow injecting custom client messages in next sent bundle (or just create new bundle?..)
 
 misc:
 - refactor config nodes
