DSW phase 1 heavensflame fix and phase 2 start

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ boss modules:
 - draw actors by framework (components should return color+prio)
 - generalize components as much as possible
 - fail log
+- use vec2 on arena
 - p3s - review, searing breeze component
 - aglaia revise, implement phases
 - ultima weapon - implement phases
