--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 refactor configs
-- storage = type->instance map
-- ui = runtime tree
+- custom (de)serialization
+- auto draw properties / enums
 - toggle/save console command
-- refactor config usage (no explicit args? use in uidev? cooldown plan editor?)
 - boss module configs + cooldown plans => 'presets'?..
 
 boss modules:
@@ -34,6 +33,7 @@ cooldown planner:
 - plan tankswaps
 - plan raid cooldowns (think about ui and storage for that...)
 - show hp, ...
+- proper cooldown plan selector in PlayerActions
 - bug: initial cd plan selected, but not active, on module activate
 
 world rendering:
