--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 boss modules:
+- dsw2
+-- p2 sanctity 2: aoes during second set of towers
+-- p2 sanctity 2: comet range helper
+-- p3
 - draw actors by framework (components should return color+prio)
 - generalize components as much as possible
 - fail log
