--- a/TODO
+++ b/TODO
@@ -28,7 +28,7 @@ cooldown planner:
 - select columns to show (concrete actions, categories)
 - plan tankswaps
 - plan raid cooldowns (think about ui and storage for that...)
-- show hp, ...
+- show hp, statuses, ...
 - proper cooldown plan selector in PlayerActions
 
 world rendering:
@@ -48,12 +48,10 @@ network:
 misc:
 - memory show/watch utility
 - clip circles to arena bounds...
-- reconsider worldstate->bossmodule event subscription model (tedious to manually subscribe/unsubsribe and forward to components...)
-- determine exact mechanism for cooldown reset (on instance enter and on wipe)
 - draw target max-melee and boss positioning hints?..
 - action not learned = GetActionStatus -> 573 (this is rowid of LogMessage "action not yet learned") => can be used to disable non-learned spells
-- assignments and sharing (webservice?)
-- aoe checks should take hitbox into account (0.5 for players) - cones, circles, rects...
+- assignments/config sharing (webservice?)
+- ?? aoe checks should take hitbox into account (0.5 for players) - cones, circles, rects... - apparently not really...
 
 notes on targeting:
 - aoe (e.g. cone) will hit if shape intersects target's hitbox; for players it is == 0.5
