Cooldown plans are now stored in encounter config nodes.
- also don't expect any raidbuffs for encounters that don't support planning...

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 boss modules:
 - dsw2
+-- p2 blue markers: better risk detection
 -- p2 sanctity 2: aoes during second set of towers
 -- p3
 - generalize components as much as possible
