--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 boss modules:
 - dsw2
--- p2 blue markers: better risk detection
 -- p2 sanctity 2: aoes during second set of towers
--- p3
+-- p3 towers+
 - generalize components as much as possible
 - fail log
 - wipe should not fast forward all phases
@@ -14,6 +13,10 @@ boss modules:
 ai:
 - better split with autorotation (core + 'override action on keypress' mode + 'full ai' mode)
 - speculative status application, gauge changes, etc.
+- move by waymarks, especially on dungeon trash
+- avoid moving through aoes while going to desired zone
+- greed aoes more (know time-to-explosion)
+- better move detection for rotation & don't cast when avoiding aoes
 
 autorotation:
 - opener support
