--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 boss modules:
 - dsw2
 -- p2 sanctity 2: aoes during second set of towers
--- p3 towers+
+-- p3 drachenlance 2 and later
 - generalize components as much as possible
 - fail log
 - wipe should not fast forward all phases
