AI targeting improvements for multidot.

--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ ai:
 
 autorotation:
 - opener support
+- dot/regen server tick tracking
 - war
 -- simulate gauge changes (message can arrive few frames after ActionEffect...)
 -- low-level rotation - improve berserk delay logic
