Use framework time for more precise timing in replays.

--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
 general:
-- switch to using time from framework
 - compressed binary format for logs
 - better ui for recording logs
 - optionally log raw ipcs when recording, visualize in replay analysis
 - simulate autorotation in replay analysis
 - move replay analysis to plugin
+- proper lb support
+- bozja action support
+- better timing tracking for: statuses, gauges, cooldowns, cast times, anim lock, ...
 
 boss modules:
 - generalize components as much as possible
